--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,13 @@
         android:layout_marginBottom="128dp"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <com.example.matrixscanviews.GraphicOverlay
+        android:id="@+id/graphic_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="128dp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
     <com.google.android.material.button.MaterialButton
